Apply Jasmin's suggestions

--- a/lean.bib
+++ b/lean.bib
@@ -1,13 +1,12 @@
 @article{lean-tactics,
  author = {Ebner, Gabriel and Ullrich, Sebastian and Roesch, Jared and Avigad, Jeremy and de Moura, Leonardo},
- title = {A Metaprogramming Framework for Formal Verification},
+ title = {A metaprogramming framework for formal verification},
  year = {2017},
  issue_date = {August 2017},
  publisher = {Association for Computing Machinery},
  address = {New York, NY, USA},
  volume = {1},
- number = {ICFP},
- url = {https://doi.org/10.1145/3110278},
+ % url = {https://doi.org/10.1145/3110278},
  doi = {10.1145/3110278},
  journal = {Proc. ACM Program. Lang.},
  month = aug,
@@ -22,40 +21,39 @@ and Kong, Soonho
 and Avigad, Jeremy
 and van Doorn, Floris
 and von Raumer, Jakob",
-editor="Felty, Amy P.
-and Middeldorp, Aart",
-title="The Lean Theorem Prover (System Description)",
-booktitle="Automated Deduction - CADE-25",
+editor="Felty, A. P.
+and Middeldorp, A.",
+title="The Lean theorem prover (system description)",
+booktitle="Automated Deduction",
+series="CADE-25",
 year="2015",
 publisher="Springer International Publishing",
 address="Cham",
 pages="378--388",
 abstract="Lean is a new open source theorem prover being developed at Microsoft Research and Carnegie Mellon University, with a small trusted kernel based on dependent type theory. It aims to bridge the gap between interactive and automated theorem proving, by situating automated tools and methods in a framework that supports user interaction and the construction of fully specified axiomatic proofs. Lean is an ongoing and long-term effort, but it already provides many useful components, integrated development environments, and a rich API which can be used to embed it into other systems. It is currently being used to formalize category theory, homotopy type theory, and abstract algebra. We describe the project goals, system architecture, and main features, and we discuss applications and continuing work.",
-isbn="978-3-319-21401-6"
 }
 
 @InProceedings{mathlib,
 	title={The Lean mathematical library},
 	author={{The mathlib Community}},
 	year={2020},
-	editor={Blanchette, J. and Hrițcu, C},
-	booktitle = {9th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP 2020)},
+	editor={Blanchette, J. and Hrițcu, C.},
+	booktitle = {9th ACM SIGPLAN International Conference on Certified Programs and Proofs},
+	series = {CPP 2020},
 	publisher = {ACM},
 }
 
 @InProceedings{ring-tactic,
 author="Gr{\'e}goire, Benjamin
 and Mahboubi, Assia",
-editor="Hurd, Joe
-and Melham, Tom",
-title="Proving Equalities in a Commutative Ring Done Right in Coq",
+editor="Hurd, J.
+and Melham, T.",
+title="Proving equalities in a commutative ring done right in Coq",
 booktitle="Theorem Proving in Higher Order Logics",
 year="2005",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 pages="98--113",
 abstract="We present a new implementation of a reflexive tactic which solves equalities in a ring structure inside the Coq system. The efficiency is improved to a point that we can now prove equalities that were previously beyond reach. A special care has been taken to implement efficient algorithms while keeping the complexity of the correctness proofs low. This leads to a single tool, with a single implementation, which can be addressed for a ring or for a semi-ring, abstract or not, using the Leibniz equality or a setoid equality. This example shows that such reflective methods can be effectively used in symbolic computation.",
-isbn="978-3-540-31820-0"
 }
 
 @misc{norm-cast,
@@ -68,11 +66,10 @@ isbn="978-3-540-31820-0"
 
 @inproceedings{monad-transformers,
 	author = {Liang, Sheng and Hudak, Paul and Jones, Mark},
-	title = {Monad Transformers and Modular Interpreters},
-	booktitle = {Proceedings of the 22Nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+	title = {Monad transformers and modular interpreters},
+	booktitle = {Proceedings of the 22nd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
 	series = {POPL '95},
 	year = {1995},
-	isbn = {0-89791-692-1},
 	location = {San Francisco, California, USA},
 	pages = {333--343},
 	numpages = {11},
